notes and develop setting changes

--- a/dotnet-bknd/appsettings.json
+++ b/dotnet-bknd/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-4VPN43T\\sqlexpress; Initial Catalog=PomoTempo; Integrated Security=True; TrustServerCertificate=True"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
