--- a/dotnet-bknd/appsettings.Development.json
+++ b/dotnet-bknd/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-4VPN43T\\sqlexpress; Initial Catalog=PomoTempo; Integrated Security=True; TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
